language/move-lang/tests/move_check/parser/expr_abort_missing_value.exp
error: 

   ┌── tests/move_check/parser/expr_abort_missing_value.move:5:5 ───
   │
 5 │     }
   │     ^ Unrecognized Token: }
   ·
 5 │     }
   │     - Expected:  "!", "&", "&mut ", "(", "()", "*", "-", "::", "abort", "break", "continue", "copy", "false", "move", "return", "true", "{", r#"0[xX][0-9a-fA-F]+"#, r#"[0-9]+"#, r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

